@@ -2,11 +2,11 @@
 # To make use of these macros insert the following line into your spec file:
 # %{load:%{_usrlibrpm}/macros.d/python}
 
-%__python	@__PYTHON@
+%__python		@__PYTHON@
 
 # Path to scripts to autogenerate python package dependencies,
 #
-# Note: Used iff _use_internal_dependency_generator is non-zero. The
+# Note: Used if _use_internal_dependency_generator is non-zero. The
 # helpers are also used by %{_rpmhome}/rpmdeps {--provides|--requires}.
 %__python_provides	%{_rpmhome}/pythondeps.sh --provides
 %__python_requires	%{_rpmhome}/pythondeps.sh --requires
@@ -14,23 +14,30 @@
 %__python_conflicts	%{_rpmhome}/pythoneggs.py --conflicts
 #
 # python main version
-%py_ver		%(echo `python -c "import sys; print sys.version[:3]"`)
+%py_ver			%(echo `python -c "import sys; print sys.version[:3]"`)
 
 # directories
-%py_prefix	%(echo `python -c "import sys; print sys.prefix"`)
-%py_libdir	%{py_prefix}/lib/python%{py_ver}
-%py_incdir	@oldincludedir@/python%{py_ver}
-%py_sitedir	%{py_libdir}/site-packages
-%py_dyndir	%{py_libdir}/lib-dynload
+# directories
+%py_ver                 %(python -c "import sys; v=sys.version_info[:2]; print '%%d.%%d'%%v" 2>/dev/null || echo PYTHON-NOT-FOUND)
+%py_prefix              %(python -c "import sys; print sys.prefix" 2>/dev/null || echo PYTHON-NOT-FOUND)
+%py_platlibdir          %(python -c 'import distutils.sysconfig; print distutils.sysconfig.get_python_lib(standard_lib=1,plat_specific=1)' 2>/dev/null || echo PYTHON-LIBDIR-NOT-FOUND)
+%py_purelibdir          %(python -c 'import distutils.sysconfig; print distutils.sysconfig.get_python_lib(standard_lib=1,plat_specific=0)' 2>/dev/null || echo PYTHON-LIBDIR-NOT-FOUND)
+# backward compatibility
+%py_libdir              %py_purelibdir
+%py_incdir              %(python -c 'import distutils.sysconfig; print distutils.sysconfig.get_python_inc()' 2>/dev/null || echo PYTHON-INCLUDEDIR-NOT-FOUND)
+%py_sitedir             %py_puresitedir
+%py_platsitedir         %(python -c 'import distutils.sysconfig; print distutils.sysconfig.get_python_lib(plat_specific=1)' 2>/dev/null || echo PYTHON-LIBDIR-NOT-FOUND)
+%py_puresitedir         %(python -c 'import distutils.sysconfig; print distutils.sysconfig.get_python_lib()' 2>/dev/null || echo PYTHON-LIBDIR-NOT-FOUND)
+%py_dyndir		%{py_platlibdir}/lib-dynload
 
 # pure python modules compilation
-%py_comp	%{__python} -c "import compileall; import sys; compileall.compile_dir(sys.argv[1], ddir=sys.argv[1][len('$RPM_BUILD_ROOT'):])"
+%py_comp		%{__python} -c "import compileall; import sys; compileall.compile_dir(sys.argv[1], ddir=sys.argv[1][len('$RPM_BUILD_ROOT'):])"
 
-%py_ocomp	%{__python} -O -c "import compileall; import sys; compileall.compile_dir(sys.argv[1], ddir=sys.argv[1][len('$RPM_BUILD_ROOT'):])"
+%py_ocomp		%{__python} -O -c "import compileall; import sys; compileall.compile_dir(sys.argv[1], ddir=sys.argv[1][len('$RPM_BUILD_ROOT'):])"
 
-%python_sitearch %(%{__python} -c "import os; from distutils.sysconfig import get_python_lib; lib=get_python_lib(1); print os.path.islink(lib) and os.path.abspath(os.path.join(os.path.dirname(lib),os.readlink(lib))) or lib")
-%python_sitelib	%(%{__python} -c "import os; from distutils.sysconfig import get_python_lib; lib=get_python_lib(); print os.path.islink(lib) and os.path.abspath(os.path.join(os.path.dirname(lib),os.readlink(lib))) or lib")
-%python_version	%(%{__python} -c "import sys; print(sys.version[0:3])")
+%python_sitearch	%(%{__python} -c "import os; from distutils.sysconfig import get_python_lib; lib=get_python_lib(1); print os.path.islink(lib) and os.path.abspath(os.path.join(os.path.dirname(lib),os.readlink(lib))) or lib")
+%python_sitelib		%(%{__python} -c "import os; from distutils.sysconfig import get_python_lib; lib=get_python_lib(); print os.path.islink(lib) and os.path.abspath(os.path.join(os.path.dirname(lib),os.readlink(lib))) or lib")
+%python_version		%(%{__python} -c "import sys; print(sys.version[0:3])")
 
 %py_compile(O)  \
 find %1 -name '*.pyc' -name '*.pyo' -exec rm -f {} \\; \
